Added MetalButton Added "Abstract" font Style tweaks

--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -1,4 +1,8 @@
 @font-face {
+  font-family: "Abstract";
+  src: url("/fonts/Abstract.ttf");
+}
+@font-face {
   font-family: "BitLight";
   src: url("/fonts/BitLight10.ttf");
 }
