Fixed BitLight font stuff

--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -4,7 +4,7 @@
 }
 @font-face {
   font-family: "BitLight";
-  src: url("/fonts/BitLight10.ttf");
+  src: url("/fonts/BitLight.ttf");
 }
 @font-face {
   font-family: "04b_25";
