--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -36,6 +36,7 @@ body {
   font-size: 10px;
   font-smooth: never;
   -webkit-font-smoothing: none;
+  image-rendering: pixelated;
   background: #000;
 }
 
